--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>BF Chess</title>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="<%= BASE_URL %>chessboardjs-0.3.0/js/chessboard-0.3.0.js"></script>
+    <link rel="stylesheet" href="<%= BASE_URL %>chessboardjs-0.3.0/css/chessboard-0.3.0.css">
+    <!-- <link rel="stylesheet" href="./public/js/chessboard-0.3.0.js"> -->
+
   </head>
   <body>
-    <noscript>
-
-    </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
